--- a/layouts/post.njk
+++ b/layouts/post.njk
@@ -14,7 +14,7 @@
 
     <main>
 
-        <a href="/">← Retour accueil</a>
+        {% include "back-home.njk" %}
 
         <ul class="metas-list">
             <li>
