--- a/layouts/home.njk
+++ b/layouts/home.njk
@@ -42,8 +42,10 @@
             <h2>Devblog</h2>
 
             <ul class="page-list">
-                {%- for post in collections.devblog -%}
-                <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+                {%- for post in collections.devblog | reverse -%}
+                    {% if post.data.published !== false %}
+                    <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+                    {% endif %}
                 {%- endfor -%}
             </ul>
 
