--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 :root {
     --color-background: hsl(100, 10%, 100%);
     --color-accent: #08415C;
+    --font: 'Inconsolata', monospace;
 
     font-size: 62.5%;
 }
@@ -37,12 +38,25 @@
 }
 
 body {
-    font-family: 'Inconsolata';
+    font-family: var(--font);
     max-width: 800px;
     margin: 0 auto;
     background: var(--color-background);
     font-size: 1.8rem;
     padding: 0 2rem;
+
+    display: grid;
+    grid-template-columns: [main] 70% [aside] 30%;
+    grid-template-rows: auto;
+    grid-template-areas: "header header"
+                            "main aside"
+                            "footer footer"
+}
+
+body.post {
+    grid-template-areas: "header header"
+                            "main main"
+                            "footer footer"
 }
 
 /* HEADER */
@@ -52,11 +66,17 @@ header {
     align-items: flex-end;
     margin-bottom: 5rem;
     flex-wrap: wrap;
+    grid-area: header;
 }
 
 header a {
     text-decoration: none;
     color: inherit;
+}
+
+
+main {
+    grid-area: main;
 }
 
 h1.titre-site {
@@ -72,6 +92,10 @@ h1.titre-site span {
     font-weight: 400;
 }
 
+aside {
+    grid-area: aside;
+}
+
 /* FOOTER */
 
 footer {
@@ -79,6 +103,7 @@ footer {
     margin-top: 5rem;
     padding: 2rem 0 4rem 0;
     text-align: center;
+    grid-area: footer;
 }
 
 h1.post-title {
@@ -93,25 +118,22 @@ ul.metas-list {
 }
 
 ul.metas-list::before {
-    content: '';
+    content: '---';
     position: absolute;
     top: -2rem;
-    width: 70px;
-    height: 1px;
-    background: black;
+    letter-spacing: 0.2rem;
 }
 
 ul.metas-list::after {
-    content: '';
+    content: '---';
     position: absolute;
     bottom: -2rem;
-    width: 70px;
-    height: 1px;
-    background: black;
+    letter-spacing: 0.2rem;
 }
 
 ul.metas-list li {
     font-size: 1.4rem;
+    line-height: 1.2rem;
 }
 
 ul.metas-list li+li {
