--- a/devblog/index.njk
+++ b/devblog/index.njk
@@ -9,12 +9,7 @@ keywords:
 <!doctype html>
 <html lang="fr">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% include "metas.njk" %}
-    <link rel="stylesheet" href="/assets/style.css">
-</head>
+{% include "head.njk" %}
 
 <body>
 
@@ -27,16 +22,17 @@ keywords:
         <h1>Devblog</h1>
 
         {%- for post in collections.devblog | reverse -%}
-            {% if post.data.published !== false %}
-            <article>
-                <span>
-                    <a href="{{ post.url }}"><h2>{{ post.data.title }}</h2></a>
-                    <time datetime"post.data.date">{{ post.data.date }}</time>
-                </span>
+        <article>
+            <div>
+                <time datetime"post.data.date">{{ post.data.date }}</time>
+                |
+                <a href="{{ post.url }}"><span>{{ post.data.title }}</span></a>
+            </div>
+            <span>
+            </span>
 
-                <p>{{ post.data.description }}</p>
-            </article>
-            {% endif %}
+            <p>{{ post.data.description }}</p>
+        </article>
         {%- endfor -%}
     </main>
 
