--- a/layouts/post.njk
+++ b/layouts/post.njk
@@ -1,14 +1,9 @@
 <!doctype html>
 <html lang="fr">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% include "metas.njk" %}
-    <link rel="stylesheet" href="/assets/style.css">
-</head>
+{% include "head.njk" %}
 
-<body>
+<body class="post">
 
     {% include "header.njk" %}
 
@@ -20,7 +15,10 @@
             <li>
                 <span>mots-clés :</span><span>{{ keywords | join(', ') }}</span>
             </li>
-            <li><span>date :</span><time datetime="{{ date }}">{{ date }}</time></li>
+
+            <li>
+                <span>date :</span><time datetime="{{ date }}">{{ date }}</time>
+            </li>
         </ul>
 
         <h1 class="post-title">{{ title }}</h1>
