--- a/includes/header.njk
+++ b/includes/header.njk
@@ -5,6 +5,7 @@
 
     <ul class="social-link inline-list">
         <li><a href="mailto:guillaume.brioudes@myllaume.fr" target="_blank">contact</a></li>
+        <li><a href="https://cv.myllaume.fr/" target="_blank">CV</a></li>
         <li><a href="https://github.com/Myllaume" target="_blank">GitHub</a></li>
         <li><a href="https://twitter.com/guill_brioudes" target="_blank">Twitter</a></li>
     </ul>
