--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
     font-size: 62.5%;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     :root { font-size: 72.5%; }
 }
 
@@ -57,6 +57,15 @@ body.post {
     grid-template-areas: "header header"
                             "main main"
                             "footer footer"
+}
+
+@media (max-width: 800px) {
+    body {
+        grid-template-areas: "header header"
+                                "main main"
+                                "aside aside"
+                                "footer footer"
+    }
 }
 
 /* HEADER */
